common headers/footers

--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
 
 	<style type="text/css">
 		.style22 {
-			border-width: 0px;
+			border-width: 0;
 		}
 		
 		.style23 {
@@ -143,11 +143,9 @@
 </head>
 
 <body>
-
 	<div style="margin:0 auto;max-width:1250px">
 		<div style="width:100%">
-
-			<script language="javascript">
+			<script>
 				displayHeader();
 			</script>
 			<div id="contenttable">
@@ -174,7 +172,7 @@
 												<td class="style24" style="background: #2d2a25;">
 													<div style="text-align:center; font-family:sans-serif;font-weight:bold">
 														<span class="style28">
-                                 <a target="_blank" href="http://eflyerorder.com/SOUTHTRACKFIELD17"><img title="Team Store" width="178px" border="0" src="images/teamstore.jpg"></a>
+                                 <a target="_blank" href="http://eflyerorder.com/SOUTHTRACKFIELD17"><img title="Team Store" width="178px" border="0" src="images/teamstore.jpg" alt="Team Store"></a>
                                  <a target="_blank" href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=shawneetf">Team Store</a>
                                 </span>
 													</div>
@@ -214,31 +212,31 @@
 													</script>
 												</td>
 											</tr>
+											<tr>
+												<td cellpadding="0" cellspacing="0" valign="top">
+													<div id="wx_module_1246">
+														<!--a href="http://www.weather.com/weather/local/66207"-->
 
-											<td cellpadding="0" cellspacing="0" valign="top">
-												<div id="wx_module_1246">
-													<!--a href="http://www.weather.com/weather/local/66207"-->
-
-												</div>
-												<script type="text/javascript" src="js/weather.js">
-												</script>
-											</td>
+													</div>
+													<script type="text/javascript" src="js/weather.js">
+													</script>
+												</td>
+											</tr>
+										</table>
+									</td>
 								</tr>
-								</table>
-								</td>
-					</tr>
-					</table>
-					<div align="center">
-						<p style="margin-top: 0;"></p>
-					</div>
+							</table>
+							<div align="center">
+								<p style="margin-top: 0;"></p>
+							</div>
 
-					<script src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE">
-					</script>
+							<script src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE">
+							</script>
 
 
-					<!-- #EndEditable -->
-					</td>
-					<td height="273"></td>
+							<!-- #EndEditable -->
+						</td>
+						<td height="273"></td>
 					</tr>
 					<tr>
 						<td>
@@ -246,7 +244,7 @@
 						</td>
 					</tr>
 
-					<script language="javascript">
+					<script>
 						displayFooter();
 					</script>
 
