--- a/team.htm
+++ b/team.htm
@@ -36,18 +36,9 @@
 					<tr>
 						<td valign="top" width="100%">
 							<!-- MSCellType="ContentBody" -->
-							<div class="menubar2">
-								<table align="center" width="100%" class="menubar2">
-									<tr class="menuba2r">
-										<td><a href="guidelines.htm">Policies</a></td>
-										<td><a href="rules.htm">Rules</a></td>
-										<td><a href="forms.htm">Forms</a></td>
-										<td><a href="roster.htm">Roster</a></td>
-										<td><a href="throws/index.htm">Shot/Disc</a></td>
-										<td><a href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=shawneetf" target="_blank">SMSTF Team Gear</a></td>
-									</tr>
-								</table>
-							</div>
+							<script language="javascript">
+								displayTeamHeader();
+							</script>
 							<!-- #BeginEditable "content" -->
 							<div>
 
@@ -63,7 +54,7 @@
 								</p>
 								<p>
 									You will get as much out of this experience as you let yourself.&nbsp; Try new events, work hard everyday, and be a team player.&nbsp; If you do those things, success will come in many different ways.&nbsp; This team has no cuts and no bench.&nbsp; Everyone
-									gets to take part and can be successful in their own way.&nbsp; Itï¿½s not about wins and losses, but the improvements that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to you.&nbsp;
+									gets to take part and can be successful in their own way.&nbsp; ItÃ¯Â¿Â½s not about wins and losses, but the improvements that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to you.&nbsp;
 								</p>
 
 								<p>&nbsp;</p>
