--- a/throws/Top Ten Reasons to Throw the Shot.htm
+++ b/throws/Top Ten Reasons to Throw the Shot.htm
@@ -11,44 +11,18 @@
 <!-- #BeginEditable "doctitle" -->
 <title>Top ten reasons to throw the shot at SMS</title>
 <!-- #EndEditable -->
-<link rel="stylesheet" type="text/css" href="../sms.css">
-<style type="text/css">
-.style23 {
-	background-image: url('../images/throws1st.jpg');
-}
-</style>
+<link rel="stylesheet" type="text/css" href="/sms.css">
+<script src="/js/common.js"></script>
 </head>
 
-<body onload="start()">
+<body onload="/*eslint-env qunit */
+start()">
 
 <div style="margin:0 auto;max-width:1250px">
 <div style="width:100%">
-
-<div id="banner" class="style1">
-	<table cellspacing="0" cellpadding="0" class="style23" style="width: 100%; height: 200px;">
-		<tr onclick="location.href='index.htm'">
-			<td align="left" valign="top">
-			
-			
-			</td>
-			
-		</tr>
-	</table>
-</div>
-<div style="max-width:1597px" id="menubar" class="menubar">
-	<table class="menubar" border="0" cellpadding="0" style="border-collapse: collapse" width="100%" id="table1">
-		<tr class="menubar">
-			<td><a href="index.htm">Throws Home</a></td>
-			<td><a href="formchart.htm">Form Chart</a></td>
-			<td><a href="videos.htm">Videos</a></td>
-			<td><a href="links.htm">Links</a></td>
-			<td><a href="../team.htm">Team</a></td>
-			
-		</tr>
-	</table>
-</div>
+<script>displayThrowsHeader();</script>
 <div style="max-width:1597px" id="contenttable">
-	<table border="0" cellpadding="0" cellspacing="0" width="100%">
+	<table class="style101" border="0" cellpadding="0" cellspacing="0" width="100%">
 		<!-- MSTableType="layout" -->
 		<tr>
 			<td valign="top" width="100%" align="center">
@@ -69,16 +43,16 @@
 			combine beauty and elegance with unrivaled foot stopping power.&nbsp; </span></p>
 			<p class="MsoNormal" style="text-autospace: none"><b>
 			<span style="font-family: Verdana,sans-serif">&nbsp;9</span></b><span style="font-family: Verdana,sans-serif"> 
-			– With moves like the glide and spin you'll think you're dancing 
+			ï¿½ With moves like the glide and spin you'll think you're dancing 
 			with the stars.&nbsp; </span></p>
 			<p class="MsoNormal" style="text-autospace: none">
 			<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">8
 			</span></b><span style="font-family: Verdana,sans-serif">- Combined 
-			with a low calorie diet and vigorous exercise, it’s one of the most 
+			with a low calorie diet and vigorous exercise, itï¿½s one of the most 
 			affective ways ever to maintain your ideal weight.</span></p>
 			<p class="MsoNormal" style="text-autospace: none">
 			<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">7
-			</span></b><span style="font-family: Verdana,sans-serif">– Looks 
+			</span></b><span style="font-family: Verdana,sans-serif">ï¿½ Looks 
 			great on a resume.</span></p>
 			<p class="MsoNormal" style="text-autospace: none">
 			<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">6
@@ -87,7 +61,7 @@
 			formulas. </span></p>
 			<p class="MsoNormal" style="text-autospace: none">
 			<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">5</span></b><span style="font-family: Verdana,sans-serif"> 
-			– Keep your shots in a large glass bowl and you’ll have a decorative 
+			ï¿½ Keep your shots in a large glass bowl and youï¿½ll have a decorative 
 			center piece for the dining room table.</span></p>
 			<p class="MsoNormal" style="text-autospace: none">
 			<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">4
@@ -98,12 +72,12 @@
 			- Grunting is encouraged.</span></p>
 			<p class="MsoNormal" style="text-autospace: none">
 			<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">2 
-			- </span></b><span style="font-family: Verdana,sans-serif">You’ll 
+			- </span></b><span style="font-family: Verdana,sans-serif">Youï¿½ll 
 			never have to worry about the embarrassment of being showcased on 
 			Metro Sports.</span></p>
 			<p class="MsoNormal" style="text-autospace: none">
 			<span style="font-family: Verdana,sans-serif">&nbsp;And the <b>#1 </b>
-			reason the throw the shot at S.M. South…</span></p>
+			reason the throw the shot at S.M. Southï¿½</span></p>
 			<p class="MsoNormal" style="text-autospace: none">
 			<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">1</span></b><span style="font-family: Verdana,sans-serif"> 
 			- Keeping a loose shot in the trunk of the car will annoy your 
@@ -120,20 +94,7 @@
 			<p>&nbsp;</p>
 			</td>
 		</tr>
-		<tr align="center">
-			<td valign="bottom"><a href="http://www.smsd.org/schools/smsouth">
-			<img border="0" src="../images/sms_tr2.jpg" width="83" height="101"></a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-			<p align="center"><font face="Arial" size="2">
-			<a href="http://www.smsd.org/schools/smsouth">Shawnee Mission South 
-			High School</a><br>
-			</font><font face="Arial" size="-1">5800 West 107th Street<br>
-			Overland Park, KS 66207</font></p>
-			</td>
-		</tr>
+		<script>displayFooter();</script>
 	</table>
 </div>
 
