--- a/links.htm
+++ b/links.htm
@@ -24,46 +24,9 @@
 <body>
 	<div style="margin: 0 auto; max-width: 1250px">
 		<div style="width: 100%">
-			<div id="banner" class="style1">
-				<table cellspacing="0" cellpadding="0" class="style2"
-					style="width: 100%">
-					<tr>
-						<td align="left" valign="top" style="width: 410px"><a
-							target="_blank"
-							href="http://smsouthtrack.blogspot.com/feeds/posts/default">
-								<img alt="RSS Feed" src="images/feed-icon-32x32.png" width="32"
-								height="32" class="style22" align="middle">
-						</a> <a target="_blank"
-							href="http://www.youtube.com/user/smsraidertrack"> <img
-								src="images/youtube.png" alt="Youtube channel" class="style22"
-								align="middle"></a> <br>
-						<a href="http://www.smstrack.org"><img src="images/clear.gif"
-								alt="" style="border: 0;"></a></td>
-						<td class="style3"
-							onclick="location.href='http://www.smstrack.org'"
-							style="cursor: pointer;"><img border="0"
-							src="images/run.png" alt=""></td>
-					</tr>
-
-				</table>
-			</div>
-			<div id="menubar" class="menubar">
-				<table class="menubar" border="0" cellpadding="0"
-					style="border-collapse: collapse" width="100%" id="table1">
-					<tr class="menubar">
-						<td><a href="index.htm">Home</a></td>
-						<td><a href="news.htm">News</a></td>
-						<td><a href="schedule.htm">Schedule/Results</a></td>
-						<!--			<td><a href="directions.htm">Directions</a></td>-->
-						<td><a href="team.htm">Team</a></td>
-						<td><a href="coaches.htm">Coaches</a></td>
-						<td><a href="archives/state_champion_teams.htm">Records/Lists</a></td>
-						<td><a href="honors.htm">Honors</a></td>
-						<td><a href="pictures.htm">Pictures</a></td>
-						<td><a href="links.htm">Links</a></td>
-					</tr>
-				</table>
-			</div>
+			<script language="javascript">
+				displayHeader();
+			</script>
 			<div id="contenttable">
 				<table border="0" cellpadding="0" cellspacing="0" width="100%">
 					<!-- MSTableType="layout" -->
@@ -167,36 +130,9 @@
 							<p>&nbsp;</p>
 						</td>
 					</tr>
-					<tr>
-						<td>
-							<p class="style23">
-								<em>Home of the Shawnee Mission South Raiders Track & Field
-									Team</em>
-							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<p>&nbsp;</p>
-						</td>
-					</tr>
-					<tr align="center">
-						<td valign="bottom"><a
-							href="http://www.smsd.org/schools/smsouth"> <img border="0"
-								src="images/sms_tr2.jpg" width="83" height="101"></a></td>
-					</tr>
-					<tr>
-						<td>
-							<p align="center">
-								<font face="Arial" size="2"> <a
-									href="http://www.smsd.org/schools/smsouth">Shawnee Mission
-										South High School</a><br>
-								</font><font face="Arial" size="-1">5800 West 107th Street<br>
-									Overland Park, KS 66207
-								</font>
-							</p>
-						</td>
-					</tr>
+			<script language="javascript">
+				displayFooter();
+			</script>
 				</table>
 			</div>
 		</div>
