--- a/throws/formchart.htm
+++ b/throws/formchart.htm
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field, mike naster, ">
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<!-- #BeginEditable "doctitle" -->
-	<title>Shot/Disc Form Chart</title>
+	<title>Shot/Disc Meet Sheets</title>
 	<!-- #EndEditable -->
 	<link rel="stylesheet" type="text/css" href="/sms.css">
 	<script src="/js/common.js"></script>
@@ -36,7 +36,7 @@ start()">
 									<td valign="top" width="100%">
 										<!-- MSCellType="ContentBody" -->
 										<p align="center">&nbsp;</p>
-										<h2 align="center">Form Chart</h2>
+										<h2 align="center">Meet Sheets</h2>
 										<p>(<span style="background-color: yellow">PB</span>)-Personal Best, (<span style="background-color: lime">SB</span>)-Seasonal Best</p>
 									</td>
 								</tr>
