Team page copy fix

--- a/team.htm
+++ b/team.htm
@@ -28,6 +28,7 @@
 
 
 			<script language="javascript">
+				/*globals displayFooter displayHeader displayTeamHeader*/
 				displayHeader();
 			</script>
 			<div id="contenttable">
@@ -41,9 +42,6 @@
 							</script>
 							<!-- #BeginEditable "content" -->
 							<div>
-
-
-
 								<h2>Welcome:</h2>
 								<p>
 									Welcome to the SM South Raider Track &amp; Field Team.&nbsp; By choosing to be part of this team, you have made your part of a great institution at SM South High School.&nbsp; This team has a deep tradition of excellence in the state of Kansas.&nbsp;
@@ -54,13 +52,13 @@
 								</p>
 								<p>
 									You will get as much out of this experience as you let yourself.&nbsp; Try new events, work hard everyday, and be a team player.&nbsp; If you do those things, success will come in many different ways.&nbsp; This team has no cuts and no bench.&nbsp; Everyone
-									gets to take part and can be successful in their own way.&nbsp; ItÃ¯Â¿Â½s not about wins and losses, but the improvements that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to you.&nbsp;
+									gets to take part and can be successful in their own way. It's not about and losses, but the improvements that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to you.&nbsp;
 								</p>
 
-								<p>&nbsp;</p>
+							<p>&nbsp;</p>
 
 
-							</div>
+					</div>
 							<!-- #EndEditable -->
 						</td>
 						<td height="273"></td>
