Another team page copy fix

--- a/team.htm
+++ b/team.htm
@@ -52,7 +52,7 @@
 								</p>
 								<p>
 									You will get as much out of this experience as you let yourself.&nbsp; Try new events, work hard everyday, and be a team player.&nbsp; If you do those things, success will come in many different ways.&nbsp; This team has no cuts and no bench.&nbsp; Everyone
-									gets to take part and can be successful in their own way. It's not about and losses, but the improvements that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to you.&nbsp;
+									gets to take part and can be successful in their own way. It's not about wins and losses, but the improvements that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to you.&nbsp;
 								</p>
 
 							<p>&nbsp;</p>
