video links rename

--- a/throws/video_links.htm
+++ b/throws/video_links.htm
@@ -15,6 +15,7 @@
 </head>
 
 <body onload="/*eslint-env qunit */
+/*globals displayThrowsHeader displayFooter*/
 start()">
 	<div style="margin:0 auto;max-width:1250px">
 		<div style="width:100%">
