--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -35,7 +35,7 @@ start()">
 								<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwWEVpTE1qSzNxY0k&usp=sharing">2016</a>
 							</p>
 
-							<p class="style25"><span class="style17">[<a class="style1m" target="_blank" href="video%20links.htm">Selected Videos</a>]</span></p>
+							<p class="style25"><span class="style17">[<a class="style1m" target="_blank" href="video_links.htm">Selected Videos</a>]</span></p>
 							<p class="style25"><a target="_blank" href="video_archives.htm">
 			Archives</a></p>
 							<!-- #EndEditable -->
