2017 booster club form

--- a/forms.htm
+++ b/forms.htm
@@ -34,7 +34,8 @@
 
 
 			<script lang="javascript">
-				displayHeader()
+				/*globals displayHeader displayTeamHeader displayFooter*/
+				displayHeader();
 			</script>
 			<div id="contenttable">
 				<table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -43,21 +44,28 @@
 						<td valign="top" width="100%">
 							<!-- MSCellType="ContentBody" -->
 							<script lang="javascript">
-								displayTeamHeader()
+								displayTeamHeader();
 							</script>
 							<!-- #BeginEditable "content" -->
 							<div>
 
 
 								<h2 align="center">Forms</h2>
-								<p align="center"><span class="style1">2016</span></p>
+								<p align="center"><span class="style1">2017</span></p>
 								<div style="display: none">
 									<p align="center">
 										<a target="_blank" href="https://docs.google.com/drawings/d/18R0vFLim1X3SZnU7D390QTIVm6eiuoNpJmSsRZ4glAw/edit?usp=sharing">
 			Spirit Wear</a>&nbsp; (<a target="_blank" href="https://docs.google.com/document/d/1-fmX1Px9T75Tsj90tsRZP0T5eaZv_K0M6syda-QKCjY/edit?usp=sharing">Order 
 			Form</a>)
 										<hr width="300px" style="color:green">
+									</p>
 								</div>
+								<p align="center">
+									<span class="style24">Booster Club Membership</span><br>
+									<a target="_blank" href="https://drive.google.com/open?id=0B_TDLMsY9LIUeVQ5WUV3THpzVzBlNGwwdkE0Qlc1R0NhVEc0">
+			Form</a><br>
+								</p>
+
 								<p align="center">
 									<span class="style1m">Booster Club Scholarship</span><br>
 
@@ -71,12 +79,12 @@
 									<span class="style1m">Merlin Gish Scholarship </span><br>
 									<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwTEFtNjhyQ25VTkJQYXVZc00tWTJIcjBLT3Jr">
 			Information</a>
-									<p align="center">
-										<span class="style24">Athnet Sports Recruiting Scholarship</span><br>
-										<a target="_blank" href="http://www.athleticscholarships.net/scholarship-contest.htm">
+								</p>
+								<p align="center">
+									<span class="style24">Athnet Sports Recruiting Scholarship</span><br>
+									<a target="_blank" href="http://www.athleticscholarships.net/scholarship-contest.htm">
 			Link</a><br>
-									</p>
-
+								</p>
 							</div>
 							<!-- #EndEditable -->
 						</td>
@@ -88,7 +96,7 @@
 						</td>
 					</tr>
 					<script lang="javascript">
-						displayFooter()
+						displayFooter();
 					</script>
 				</table>
 			</div>
