Schedule UI + throws videos

--- a/throws/Top Ten Reasons to Throw the Discus.htm
+++ b/throws/Top Ten Reasons to Throw the Discus.htm
@@ -16,6 +16,7 @@
 </head>
 
 <body onload="/*eslint-env qunit */
+/*globals displayThrowsHeader */
 start()">
 
 	<div style="margin:0 auto;max-width:1250px">
@@ -41,9 +42,8 @@ start()">
 											<b><span style="font-size: 14.0pt; font-family: Verdana,sans-serif">
 			&nbsp;</span></b></p>
 										<p class="MsoNormal" style="text-autospace: none"><b>
-			<span style="font-family: Verdana,sans-serif">10</span></b><span style="font-family: Verdana,sans-serif"> 
-			– The same technique drills are rumored to be used in Jedi Knight 
-			training.</span></p>
+			<span style="font-family: Verdana,sans-serif">10</span></b><span style="font-family: Verdana,sans-serif">
+			- The same technique drills are rumored to be used in Jedi Knight training.</span></p>
 										<p class="MsoNormal" style="text-autospace: none">
 											<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">9</span></b><span style="font-family: Verdana,sans-serif"> 
 			- Members of the opposite sex will be dazzled by your amazing hip 
@@ -58,7 +58,7 @@ start()">
 			floor as they are in the throwing circle.</span></p>
 										<p class="MsoNormal" style="text-autospace: none">
 											<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">6</span></b><span style="font-family: Verdana,sans-serif"> 
-			– Twice the fun of Navy SEAL training without all of that annoying 
+			- Twice the fun of Navy SEAL training without all of that annoying 
 			wetness.</span></p>
 										<p class="MsoNormal" style="text-autospace: none">
 											<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">5</span></b><span style="font-family: Verdana,sans-serif"> 
@@ -77,10 +77,10 @@ start()">
 			track.</span></p>
 										<p class="MsoNormal" style="text-autospace: none">
 											<span style="font-family: Verdana,sans-serif">&nbsp;And the # 1 reason to 
-			throw the discus at S.M. South…</span></p>
+			throw the discus at S.M. South...</span></p>
 										<p class="MsoNormal" style="text-autospace: none">
 											<span style="font-family: Verdana,sans-serif">&nbsp;</span><b><span style="font-family: Verdana,sans-serif">1</span></b><span style="font-family: Verdana,sans-serif"> 
-			- When you have a runny nose… snot goes flying everywhere!</span></p>
+			- When you have a runny nose, snot goes flying everywhere!</span></p>
 										<p class="MsoNormal" style="text-autospace: none">
 											<span style="font-family: Verdana,sans-serif">&nbsp;</span></p>
 										<p class="MsoNormal" style="text-autospace: none">
