--- a/throws/video_links.htm
+++ b/throws/video_links.htm
@@ -37,55 +37,62 @@ start()">
 							<p>Ulf Timmerman 71-02 indoors
 								<a target="_blank" href="http://www.youtube.com/watch?v=c5K239qXM40">http://www.youtube.com/watch?v=c5K239qXM40</a></p>
 							<p>Michael Carter 70-03
-								<a href="http://www.youtube.com/watch?v=bXPr_DcKuGo">
+								<a target="_blank" href="http://www.youtube.com/watch?v=bXPr_DcKuGo">
 			http://www.youtube.com/watch?v=bXPr_DcKuGo</a></p>
+							<p>Michelle Carter 67-8.25 (Rio 2016)
+								<a target="_blank" href="https://youtu.be/Y463P-Y4o18">
+			https://youtu.be/Y463P-Y4o18</a></p>
 							<p>Michael Carter 69-02
-								<a href="http://www.youtube.com/watch?v=nKVXhugN1lY">
+								<a target="_blank" href="http://www.youtube.com/watch?v=nKVXhugN1lY">
 			http://www.youtube.com/watch?v=nKVXhugN1lY</a></p>
 							<p>&nbsp;</p>
 							<p class="style25">Shot (rotational)</p>
-							<p class="style26">Jordan Giest 76-10.5 (HS)
-								<a target="_blank" href="https://vimeo.com/204976091">https://vimeo.com/204976091</a> </p>
-							<p class="style26">Randy Barnes 75-10
-								<a target="_blank" href="http://www.youtube.com/watch?v=Nrw0bHFxPbM">1990 Randy Barnes 23.12M - 29MB</a></p>
-							<p class="style26">Brian Oldfield 75-00
-								<a target="_blank" href="http://www.youtube.com/watch?v=LQ86rhL_WOA">World Record 75' in 1975</a></p>
-							<p class="style26">&nbsp;</p>
-							<p class="style26">Shot (combined)</p>
-							<p class="style26">Historic Men 1
-								<a href="http://www.youtube.com/watch?v=w-W2ubeSU5U">
+							<p class="style26">Ryan Crouser 73-10.75 (Rio 2016)
+								<a target="_blank" href="https://youtu.be/zs97EQNJTFA">https://youtu.be/zs97EQNJTFA</a> </p>
+							<p class="style26">Raven Saunders 64-2.25 (NCAA Indoor 2017)
+								<a target="_blank" href="https://vimeo.com/207927924">https://vimeo.com/207927924</a> </p>
+							<p class=" style26 ">Jordan Giest 76-10.5 (HS)
+								<a target="_blank " href="https://vimeo.com/204976091 ">https://vimeo.com/204976091</a> </p>
+							<p class="style26 ">Randy Barnes 75-10
+								<a target="_blank " href="http://www.youtube.com/watch?v=Nrw0bHFxPbM ">1990 Randy Barnes 23.12M - 29MB</a></p>
+							<p class="style26 ">Brian Oldfield 75-00
+								<a target="_blank " href="http://www.youtube.com/watch?v=LQ86rhL_WOA ">World Record 75' in 1975</a></p>
+							<p class="style26 ">&nbsp;</p>
+							<p class="style26 ">Shot (combined)</p>
+							<p class="style26 ">Historic Men 1
+								<a href="http://www.youtube.com/watch?v=w-W2ubeSU5U ">
 http://www.youtube.com/watch?v=w-W2ubeSU5U</a></p>
-							<p class="style26">Historic Men 2
-								<a href="http://www.youtube.com/watch?v=OJhQEhkRX3c">
+							<p class="style26 ">Historic Men 2
+								<a href="http://www.youtube.com/watch?v=OJhQEhkRX3c ">
 			http://www.youtube.com/watch?v=OJhQEhkRX3c</a></p>
-							<p class="style1">&nbsp;</p>
+							<p class="style1 ">&nbsp;</p>
 
-							<p class="style25">Discus</p>
+							<p class="style25 ">Discus</p>
 							<p>Suzy Powell - Modesto Bee
-								<a target="_blank" href="http://www.youtube.com/watch?v=5ogK7WHjGT0">http://www.youtube.com/watch?v=5ogK7WHjGT0</a></p>
+								<a target="_blank " href="http://www.youtube.com/watch?v=5ogK7WHjGT0 ">http://www.youtube.com/watch?v=5ogK7WHjGT0</a></p>
 							<p>Suzy Powell&nbsp; 222-0&nbsp;
-								<a target="_blank" href="http://www.youtube.com/watch?v=-Bqqcsu8CH0">http://www.youtube.com/watch?v=-Bqqcsu8CH0</a></p>
+								<a target="_blank " href="http://www.youtube.com/watch?v=-Bqqcsu8CH0 ">http://www.youtube.com/watch?v=-Bqqcsu8CH0</a></p>
 							<p>Gerd Kanter 236-03&nbsp;
-								<a target="_blank" href="http://www.youtube.com/watch?v=lkSkFmHYdtI">
+								<a target="_blank " href="http://www.youtube.com/watch?v=lkSkFmHYdtI ">
 http://www.youtube.com/watch?v=lkSkFmHYdtI</a></p>
 							<p>Mac Wilkins 221-05
-								<a href="http://www.youtube.com/watch?v=aeS0_MWtTbo">
+								<a href="http://www.youtube.com/watch?v=aeS0_MWtTbo ">
 			http://www.youtube.com/watch?v=aeS0_MWtTbo</a></p>
 							<p>Al Oerter Story
-								<a href="http://www.youtube.com/watch?v=kI1MfYqglik">
+								<a href="http://www.youtube.com/watch?v=kI1MfYqglik ">
 			http://www.youtube.com/watch?v=kI1MfYqglik</a>&nbsp;</p>
 							<p>Historic Men
-								<a target="_blank" href="http://www.youtube.com/watch?v=RbxcDIj_pLU">
+								<a target="_blank " href="http://www.youtube.com/watch?v=RbxcDIj_pLU ">
 			http://www.youtube.com/watch?v=RbxcDIj_pLU</a></p>
 							<p>&nbsp;</p>
-							<p align="center" class="style16">Lifting</p>
+							<p align="center " class="style16 ">Lifting</p>
 							<p>Power clean technique
-								<a target="_blank" href="http://www.youtube.com/watch?v=6TlbDQUWs0s">http://www.youtube.com/watch?v=6TlbDQUWs0s</a></p>
+								<a target="_blank " href="http://www.youtube.com/watch?v=6TlbDQUWs0s ">http://www.youtube.com/watch?v=6TlbDQUWs0s</a></p>
 							<p>&nbsp;</p>
 
 							<!-- #EndEditable -->
 						</td>
-						<td height="273"></td>
+						<td height="273 "></td>
 					</tr>
 					<tr>
 						<td>
