first 2017 throws videos

--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -15,12 +15,13 @@
 </head>
 
 <body onload="/*eslint-env qunit */
+/*globals displayFooter displayThrowsHeader*/
 start()">
 
 	<div style="margin:0 auto;max-width:1250px">
 		<div style="width:100%">
 			<script>
-				displayThrowsHeader()
+				displayThrowsHeader();
 			</script>
 			<div style="max-width:1597px" id="contenttable">
 				<table class="style101" border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -31,6 +32,9 @@ start()">
 							<!-- #BeginEditable "content" -->
 							<p>&nbsp;</p>
 							<p align="center" class="style1h">&nbsp;Videos</p>
+							<p align="center" class="style15">
+								<a target="_blank" href="/throws/videos2017.htm">2017</a>
+							</p>
 							<p align="center" class="style15">
 								<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwWEVpTE1qSzNxY0k&usp=sharing">2016</a>
 							</p>
