--- a/throws/formchart.htm
+++ b/throws/formchart.htm
@@ -16,6 +16,7 @@
 </head>
 
 <body onload="/*eslint-env qunit */
+/*globals displayThrowsHeader displayFooter*/
 start()">
 
 	<div style="margin:0 auto;max-width:1250px">
@@ -38,6 +39,26 @@ start()">
 										<p align="center">&nbsp;</p>
 										<h2 align="center">Meet Sheets</h2>
 										<p>(<span style="background-color: yellow">PB</span>)-Personal Best, (<span style="background-color: lime">SB</span>)-Seasonal Best</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1VZXghLeVreIW3OuEn0H7-aFkKPJoF4kVz8vdvYmW1ok/pubhtml?widget=true&amp;headers=false"></iframe>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<p>&nbsp;</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<p>***</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<p>&nbsp;</p>
 									</td>
 								</tr>
 								<tr>
