--- a/throws/videos2017.htm
+++ b/throws/videos2017.htm
@@ -26,6 +26,12 @@ start()">
 				displayThrowsHeader();
 			</script>
 			<h1>2017</h1>
+			<h3>25-March - JCCC Indoor</h3>
+			<br>
+			<div style="max-width:1597px">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCSesIK1V-GYmmKrnz6G7nAN" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<br>
 			<h3>16-March - Practice</h3>
 			<br>
 			<div style="max-width:1597px">
