Added South Relays Schedule

--- a/south_relays.htm
+++ b/south_relays.htm
@@ -24,6 +24,7 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.countdown.min.js"></script>
 	<script type="text/javascript">
+		/*globals displayHeader displayFooter*/
 		$(function()
 		{
 			var endDate = new Date();
@@ -67,9 +68,8 @@
 							<p class="style15">Saturday, April 1st</p>
 							<p class="style15"><em>Note: Due to construction all events will be held at SM North District Stadium</em></p>
 							<div style="margin:auto; display:none" id="defaultCountdown"></div>
-							<p style="display:none" class="style15">
-								<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwbFozSnBBSWNtbVBfd2JRSWc0bEdWVTliQktv/view?usp=sharing">
-			Results</a> </p>
+							<p style="display:block" class="style15">
+								<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwT1hDVzFNODBXNnhRdWh3aktpSjc0cW9WUE5v">Schedule</a> </p>
 							<p class="style15">
 								<a href="records/smsrelaysboys.htm">Meet Records</a></p>
 
