more structured data

--- a/index.htm
+++ b/index.htm
@@ -2,9 +2,10 @@
 
 <head>
 	<script type="application/ld+json">
-		{
+{
 			"@context": "http://schema.org",
 			"@type": "SportsTeam",
+			"name": "Shawnee Mission South Raiders",
 			"sport": "Track",
 			"url": "http://smstrack.org",
 			"address":
@@ -22,9 +23,25 @@
 				"givenName": "James",
 				"familyName": "Wannamaker",
 				"email": "jameswannamaker@smsd.org"
-			}]
-		}
-	</script>
+			}],
+            "memberOf": [
+            {
+            	"@type":"sportsOrganization",
+                "name":"Sunflower League"
+            }],
+            "award": [
+            	"State Champions 1975(i)",
+            	"State Champions 1975",
+            	"State Champions 1976(i)",
+            	"State Champions 1976",
+            	"State Champions 1978(i)",
+            	"State Champions 1978",
+            	"State Champions 1979",
+            	"State Champions 1980",
+            	"State Champions 2008"
+                ]
+                
+		}	</script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
