--- a/index.htm
+++ b/index.htm
@@ -28,6 +28,10 @@
             {
             	"@type":"sportsOrganization",
                 "name":"Sunflower League"
+            },
+            {
+            	"@type":"sportsOrganization",
+                "name":"KSHSAA"
             }],
             "award": [
             	"State Champions 1975(i)",
