South Relays Results & Records

--- a/south_relays.htm
+++ b/south_relays.htm
@@ -25,6 +25,7 @@
 	<script type="text/javascript" src="js/jquery.countdown.min.js"></script>
 	<script type="text/javascript">
 		/*globals displayHeader displayFooter*/
+		/*eslint-env jquery */
 		$(function()
 		{
 			var endDate = new Date();
@@ -69,7 +70,7 @@
 							<p class="style15"><em>Note: Due to construction all events will be held at SM North District Stadium</em></p>
 							<div style="margin:auto; display:none" id="defaultCountdown"></div>
 							<p style="display:block" class="style15">
-								<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwT1hDVzFNODBXNnhRdWh3aktpSjc0cW9WUE5v">Schedule</a> </p>
+								<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwSkVBdjN3VW4yc2hyM3ByaWtlSDhuelB4azNF">Results</a> </p>
 							<p class="style15">
 								<a href="records/smsrelaysboys.htm">Meet Records</a></p>
 
