SM North JV and BV Relays videos

--- a/throws/videos2017.htm
+++ b/throws/videos2017.htm
@@ -26,23 +26,35 @@ start()">
 				displayThrowsHeader();
 			</script>
 			<h1>2017</h1>
-			<h3>1-Apr - South Relays</h3>
+			<br>
+			<div style="max-width:1597px">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCTXkoqMQSzMMMUy9tFVBC8L" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<h3>7-Apr - BV Relays</h3>
+			<br>
+			<br>
+			<div style="max-width:1597px">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCSPnyvRY4_H1tky9--A1pce" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<h3>6-Apr - SM North JV</h3>
+			<br>
 			<br>
 			<div style="max-width:1597px">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCSMMUmn3yx8GUsvJwizSxOo" frameborder="0" allowfullscreen></iframe>
 			</div>
+			<h3>1-Apr - South Relays</h3>
 			<br>
-			<h3>25-March - JCCC Indoor</h3>
 			<br>
 			<div style="max-width:1597px">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCSesIK1V-GYmmKrnz6G7nAN" frameborder="0" allowfullscreen></iframe>
 			</div>
+			<h3>25-March - JCCC Indoor</h3>
 			<br>
-			<h3>16-March - Practice</h3>
 			<br>
 			<div style="max-width:1597px">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCTlEf-nc9qRE8PxHrJvXRPN" frameborder="0" allowfullscreen></iframe>
 			</div>
+			<h3>16-March - Practice</h3>
 			<br>
 			<br>
 			<br>
