Gish Scholarship/Coaches update

--- a/coaches.htm
+++ b/coaches.htm
@@ -83,10 +83,10 @@
 											<td>&nbsp;</td>
 										</tr>
 										<tr>
-											<td><b class="style1">Mike Alexander</b> - (Pole Vault)</td>
+											<td><b class="style1">Elayna Briggs</b> - (Pole Vault)</td>
 										</tr>
 										<tr>
-											<td><a class="slink" href="mailto:malexander131@hotmail.com">malexander131@hotmail.com</a></td>
+											<td><a class="slink" href="mailto:briggse596@gmail.com">briggse596@gmail.com</a></td>
 										</tr>
 										<tr>
 											<td>&nbsp;</td>
