--- a/forms.htm
+++ b/forms.htm
@@ -77,8 +77,10 @@
 								</p>
 								<p align="center">
 									<span class="style1m">Merlin Gish Scholarship </span><br>
-									<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwTEFtNjhyQ25VTkJQYXVZc00tWTJIcjBLT3Jr">
-			Information</a>
+									<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwakVDeGU3ZWszejR2NW1jS0s2WjNQSDV5UkxN/view?usp=sharing">
+			Information</a><br>
+									<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwbDBWMnF4aHQ1ZkJ3U05nWXV0RWpFdWd0SzVF/view?usp=sharing">
+			Application</a>
 								</p>
 								<p align="center">
 									<span class="style24">Athnet Sports Recruiting Scholarship</span><br>
