--- a/throws/videos2017.htm
+++ b/throws/videos2017.htm
@@ -28,6 +28,12 @@ start()">
 			<h1>2017</h1>
 			<br>
 			<div style="max-width:1597px">
+			     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCQuWKjoLH2L1CtW7FcIZeXm" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<h3>14-Apr - Mid-Season Classic</h3>
+			<br>
+			<br>
+			<div style="max-width:1597px">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCTXkoqMQSzMMMUy9tFVBC8L" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<h3>7-Apr - BV Relays</h3>
