Seaman Relays Videos

--- a/throws/videos2017.htm
+++ b/throws/videos2017.htm
@@ -28,6 +28,12 @@ start()">
 			<h1>2017</h1>
 			<br>
 			<div style="max-width:1597px">
+    			<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCTbYDBOFmxE--cbtQDfezD1" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<h3>28-Apr - Seaman Relays</h3>
+			<br>
+			<br>
+			<div style="max-width:1597px">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCSXoWor-C3w0LVVU3amJPfE" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<h3>22-Apr - KU Relays</h3>
