added league and regional video

--- a/throws/videos2017.htm
+++ b/throws/videos2017.htm
@@ -28,6 +28,17 @@ start()">
 			<h1>2017</h1>
 			<br>
 			<div style="max-width:1597px">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCShJZQiTWP5vKJCuKzZpwrP" frameborder="0" allowfullscreen></iframe>			</div>
+			<h3>19-May - Regional</h3>
+			<br>
+			<br>
+			<div style="max-width:1597px">
+    			<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCQMOGWLH3Iqh-Q6qQ3HX9P8" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<h3>12-May - League</h3>
+			<br>
+			<br>
+			<div style="max-width:1597px">
     			<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOZ9VhXrytCTbYDBOFmxE--cbtQDfezD1" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<h3>28-Apr - Seaman Relays</h3>
