All Sunflower League

--- a/honors.htm
+++ b/honors.htm
@@ -47,9 +47,9 @@
 							<p>&nbsp;</p>
 
 							<h1 align="center"><font size="5" class="style1h">
-			2016 Post-Season Honors<br>
+			2017 Post-Season Honors<br>
 </font></h1>
-							<table style="display:block" bordercolor="#2e4d47" width="244" align="center" class="style56" style="display:none">
+							<table bordercolor="#2e4d47" width="244" align="center" class="style56" style="display:none">
 								<tr>
 									<td width="230">
 										<h2 align="center" class="style1h">All-Metro</h2>
@@ -79,7 +79,7 @@
 
 								<tr>
 									<td width="230" align="center">
-										Quincie Fischer - <em>Discus</em><br> Desirae Upton - <em>Shot</em><br>
+										Desirae Upton - <em>Shot</em><br>
 									</td>
 								</tr>
 								<tr>
@@ -91,7 +91,7 @@
 
 								<tr>
 									<td width="230" align="center">
-										Kamau Kimaru - <em>Discus</em><br> Clara Sitas - <em>Discus</em><br>
+										Quincie Fischer - <em>Discus</em><br>Rakeya Martin - <em>Discus</em><br>
 									</td>
 								</tr>
 								<tr>
@@ -102,7 +102,20 @@
 								</tr>
 								<tr>
 									<td width="230" align="center">
-										Rakeya Martin - <em>Discus</em><br> Kyheim Matthews - <em>Shot</em><br> Danielle Reichart - <em>300 Hurdles</em><br> Clara Sitas - <em>Shot</em><br>
+										Mitch Brock - <em>800</em><br>
+										Andrew Crawford - <em>High Jump</em><br>
+										Danielle Reichart - <em>300 Hurdles</em><br>
+										Desirae Upton - <em>Discus</em><br>
+										<br>
+										Subreedia Lewis - <em>4x100</em><br>
+										Danielle Reichart - <em>4x100</em><br>
+										Jadyn Smith - <em>4x100</em><br>
+										Desirae Upton - <em>4x100</em><br>
+										<br>
+										Huseyin Bilgen - <em>4x100</em><br>
+										Trenton Holliman - <em>4x100</em><br>
+										Maicel Smith - <em>4x100</em><br>
+										Cameron Union - <em>4x100</em><br>
 									</td>
 								</tr>
 
