Throws practice sheets and coaches updates

--- a/coaches.htm
+++ b/coaches.htm
@@ -46,7 +46,7 @@
 
 							<p>&nbsp;</p>
 
-							<h3 align="center" class="style1h">2017 Coaches</h3>
+							<h3 align="center" class="style1h">2018 Coaches</h3>
 
 							<div align="center">
 								<table height="605" border="0" id="table3">
@@ -110,6 +110,18 @@
 											<td>&nbsp;</td>
 										</tr>
 										<tr>
+											<td><b class="style1">Kailey Groves</b> - (Sprints)</td>
+										</tr>
+										<!--tr>
+					<td>(913) 993-2453</td>
+				</tr-->
+										<tr>
+											<td><a class="slink" href="mailto:KaileyGroves@smsd.org">KaileyGroves@smsd.org</a></td>
+										</tr>
+										<tr>
+											<td>&nbsp;</td>
+										</tr>
+										<tr>
 											<td><b class="style1">Suni Haberland</b> - (High Jump, JV Sprints)</td>
 										</tr>
 										<tr>
@@ -143,18 +155,6 @@
 										<tr>
 											<td>&nbsp;</td>
 										</tr>
-										<tr>
-											<td><b class="style1">Robert Ray</b> - (Sprints)</td>
-										</tr>
-										<!--tr>
-					<td>(913) 993-2453</td>
-				</tr-->
-										<tr>
-											<td><a class="slink" href="mailto:RobertRay@smsd.org">RobertRay@smsd.org</a></td>
-										</tr>
-										<tr>
-											<td>&nbsp;</td>
-										</tr>
 									</tbody>
 								</table>
 
@@ -163,7 +163,7 @@
 								<p style="margin-bottom: 0;">
 									<font size="2">
 
-										<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->4 Feb 2017
+										<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->16 Nov 2017
 										<!--webbot bot="Timestamp" i-checksum="14754" endspan -->
 									</font>
 
