--- a/throws/practice.htm
+++ b/throws/practice.htm
@@ -43,7 +43,13 @@ start()">
 						<td>&nbsp;</td>
 					</tr>
 					<tr>
-						<td align="center"><a href="https://drive.google.com/open?id=1eDKVUVjomjb8irnCTpTxma__l5c6O8w4_19J60rqWT0">Workout Sheets</a></td>
+						<td align="center"><a href="https://docs.google.com/spreadsheets/d/1dRRon0mNO20C469KzssJznhFGetjEugEqAU5CK8r6yk/edit?usp=sharing">Workout Phase 1</a></td>
+					</tr>
+					<tr>
+						<td align="center"><a href="https://docs.google.com/spreadsheets/d/101TFIoYXViGJYD-zhuqWq7qgC7idI07JgjNCy5p7fjI/edit?usp=sharing">Workout Phase 2</a></td>
+					</tr>
+					<tr>
+						<td align="center"><a href="https://docs.google.com/spreadsheets/d/1tJajrgHpOn8OFaq-zQnO5_m_bmjpLHfveR44JzvZP0I/edit?usp=sharing">Workout Phase 3</a></td>
 					</tr>
 				</table>
 				<p>&nbsp;</p>
