changed Baylis email address

--- a/coaches.htm
+++ b/coaches.htm
@@ -95,7 +95,7 @@
 											<td><b class="style1">Demetrious Baylis</b> - (Horizontal Jumps)</td>
 										</tr>
 										<tr>
-											<td><a class="slink" href="mailto:demetrious.baylis@vml.com">demetrious.baylis@vml.com</a></td>
+											<td><a class="slink" href="mailto:dbaylis1229@gmail.com">dbaylis1229@gmail.com</a></td>
 										</tr>
 										<tr>
 											<td>&nbsp;</td>
